# stylegan3

./: README.md  setup.cfg
dcstylegan3/: avg_spectra.py  calc_metrics.py  dataset_tool.py  gen_images.py  gen_video.py  legacy.py  train.py  visualizer.py
dcstylegan3/dnnlib/: util.py
dcstylegan3/gui_utils/: gl_utils.py  glfw_window.py  imgui_utils.py  imgui_window.py  text_utils.py
dcstylegan3/metrics/: equivariance.py  frechet_inception_distance.py  inception_score.py  kernel_inception_distance.py  metric_main.py  metric_utils.py  perceptual_path_length.py  precision_recall.py
dcstylegan3/torch_utils/: custom_ops.py  misc.py  persistence.py  training_stats.py
dcstylegan3/torch_utils/ops/: bias_act.py  conv2d_gradfix.py  conv2d_resample.py  filtered_lrelu.py  grid_sample_gradfix.py  upfirdn2d.py
dcstylegan3/training/: augment.py  dataset.py  loss.py  networks_stylegan2.py  networks_stylegan3.py  training_loop.py
dcstylegan3/viz/: capture_widget.py  equivariance_widget.py  latent_widget.py  layer_widget.py  performance_widget.py  pickle_widget.py  renderer.py  stylemix_widget.py  trunc_noise_widget.py
