[metadata]
name = dcstylegan3
version = 0.0.1
long_description = file: README.md
description = Alias-Free Generative Adversarial Networks (StyleGAN3)
license =
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy>=1.20
    click>=8.0
    pillow>=8.3.1
    scipy>=1.7.1
    torch>=1.9.1
    requests>=2.26.0
    tqdm>=4.62.2
    ninja>=1.10.2
    matplotlib>=3.4.2
    imageio>=2.9.0
    imgui>=1.3.0
    glfw>=2.2.0
    pyopengl>=3.1.5
    imageio-ffmpeg>=0.4.3
    pyspng

[options.package_data]
* =
    *.yaml
    *.cu
    *.cpp
    *.h

[options.entry_points]
console_scripts =
    dcstylegan3-avg-spectra = dcstylegan3.avg_spectra:main
    dcstylegan3-calc-metrics = dcstylegan3.calc_metrics:calc_metrics
    dcstylegan3-dataset-tool = dcstylegan3.dataset_tool:convert_dataset
    dcstylegan3-gen-images = dcstylegan3.gen_images:generate_images
    dcstylegan3-gen-video = dcstylegan3.gen_video:generate_images
    dcstylegan3-legacy = dcstylegan3.legacy:convert_network_pickle
    dcstylegan3-train = dcstylegan3.train:main
    dcstylegan3-vizualizer = dcstylegan3.vizualizer:main

